[package]

name = "glyph_packer"
version = "0.0.0"
authors = ["Coeuvre <coeuvre@gmail.com>", "Ty Overby <ty@pre-alpha.com>"]
keywords = ["texture", "packer", "piston", "glyph"]
description = "A library for packing glyphs into a texture."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TyOverby/glyph_packer.git"
homepage = "https://github.com/TyOverby/glyph_packer"

[lib]

name = "glyph_packer"

[dependencies]
image = "*"
